--- a/ssfl/static/gen/packed.css
+++ b/ssfl/static/gen/packed.css
@@ -13,8 +13,6 @@ font-family: 'Roboto', sans-serif;
 td.fc-today {
 	background:#FFF !important;
 	position: relative;
-
-
 }
 
 .fc-first th{
@@ -728,6 +726,12 @@ table.fc-header{
 .fc-event .ui-resizable-handle {
 	display: none !important;
 	}
+
+/* Allow multi-line event titles */
+/*    https://stackoverflow.com/questions/25272132/multiline-titles-in-fullcalendar-2-1-0-beta1-2-in-day-grid/27370044#27370044 */
+.fc-day-grid-event > .fc-content {
+    white-space: normal;
+}
 
 
 
