Added notion of sign_snippet and verified that a cell can contain multiple snippets.

--- a/ssfl/templates/main/main.jinja2
+++ b/ssfl/templates/main/main.jinja2
@@ -41,6 +41,10 @@
                                         {% set story = cell.element %}
                                         {% include 'main/snippet_slideshow.jinja2' %}
                                     {% endif %}
+                                    {% if cell.element_type == 'SIGN_SNIPPET' %}
+                                        {% set story = cell.element %}
+                                        {% include 'base/snippet_sign.jinja2' %}
+                                    {% endif %}
                                 </div>
                             {% endfor %}
                         </div>
