--- a/ssfl/templates/main/multi_row_col.jinja2
+++ b/ssfl/templates/main/multi_row_col.jinja2
@@ -4,28 +4,14 @@
 
 {% block content %}
 
-{% for item1 in snips %} {# Each item corresponds to all stories horizontally across the page #}
-<div class="row">
-    {% for item in item1 %} {# Each item corresponds to all stories vertically in a cell #}
-    <div class="col col-md-6 col-lg-4 col-xl-3">
-        <div class="container-fluid">
-            {% if item.cell_type=='story' %}
-            {% set item2 = item.story %}
-            <div class="col">
-               {% include 'main/snippet_story.jinja2' %}
-            </div>
-            {% endif %}
-            {% if item.cell_type=='calendar' %}
-            {% set item2 = item.calendar.cal_data %}
-            <div class="col ">
-                {% include 'main/calendar_plugin.jinja2' %}
-            </div>
-            {% endif %}
-
+    {% for item1 in snips %} {# Each item corresponds to all stories horizontally across the page #}
+        <div class="row">
+            {% for item in item1 %} {# Each item corresponds to all stories vertically in a cell #}
+                <div class="col col-md-6 col-lg-4 col-xl-3">
+                    {% include '/base/snippet' %}
+                </div>
+            {% endfor %}
         </div>
-    </div>
     {% endfor %}
-</div>
-{% endfor %}
 
 {% endblock %}
