Add UI to search for pages and photos

--- a/ssfl/templates/base/nav.jinja2
+++ b/ssfl/templates/base/nav.jinja2
@@ -110,6 +110,9 @@
                             Manage Import from Wordpress Database
                         </a>
                         <hr class="navbar-divider">
+                        <a class="navbar-item" href="{{ url_for('admin_bp.manage_page_data') }}">
+                            Review Recent Pages
+                        </a>
                         <a class="navbar-item">
                             Report an issue
                         </a>
