Add ability to delete pages and photos

--- a/ssfl/templates/admin/db_get_database_data.jinja2
+++ b/ssfl/templates/admin/db_get_database_data.jinja2
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <!--
      Route: '/admin/manage_page_data' => manage_page_data
-     Template: db_manage_pages.jinja2
-     Form: manage_page_data_form.py
+     Template: db_get_database_data.jinja2
+     Display:  db_display_database_data.jinja2
+     Form: get_database_data_form.py
      Processor: manage_page_data.py
 -->
 {% extends 'base/layout.jinja2' %}
