--- a/ssfl/templates/admin/db_display_database_data.jinja2
+++ b/ssfl/templates/admin/db_display_database_data.jinja2
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <!--
      Route: '/admin/manage_page_data' => manage_page_data
-     Template: db_manage_pages.jinja2
-     Form: manage_page_data_form.py
+     Template: db_get_database_data.jinja2
+     Display:  db_display_database_data.jinja2
+     Form: get_database_data_form.py
      Processor: manage_page_data.py
 -->
 {% extends 'base/layout.jinja2' %}
@@ -26,11 +27,15 @@
                     <tbody>
                     {% for field in values %}
                         <tr>
-                            <td>{{ field.id }}</td>
-                            <td>{{ field.page_title }}</td>
-                            <td>{{ field.page_name }}</td>
-                            <td>{{ field.page_author }}</td>
-                            <td>{{ field.page_date }}</td>
+                            {% with %}
+                                {% set button=field.del_button %}
+                                <td>{% include 'base/button_form.jinja2' %}</td>
+                                <td>{{ field.id }}</td>
+                                <td>{{ field.page_title }}</td>
+                                <td>{{ field.page_name }}</td>
+                                <td>{{ field.page_author }}</td>
+                                <td>{{ field.page_date }}</td>
+                            {% endwith %}
                         </tr>
                     {% endfor %}</tbody>
                 </table>
