Add ability to look at layout structure.  Fix extra <p> tags in html_mgt (should be span).

--- a/ssfl/templates/admin/db_display_database_data.jinja2
+++ b/ssfl/templates/admin/db_display_database_data.jinja2
@@ -28,6 +28,8 @@
                     {% for field in values %}
                         <tr>
                             {% with %}
+                                {% set button=field.view_button %}
+                                <td>{% include 'base/button_form.jinja2' %}</td>
                                 {% set button=field.del_button %}
                                 <td>{% include 'base/button_form.jinja2' %}</td>
                                 <td>{{ field.id }}</td>
