Debug of Layout, setting flow and left/right positioning.  Still needs considerable cleanup

--- a/ssfl/templates/base/slideshow.jinja2
+++ b/ssfl/templates/base/slideshow.jinja2
@@ -1,4 +1,4 @@
-<container class="devBorder container-fluid">
+<container class="devBorder container-fluid" {{ float_dir }}>
     <div class="row">
         <div class="col">
             <div class="devBorder2" style="max-width: {{ slideshow.width }}px;
