--- a/ssfl/templates/admin/miscellaneous_functions.jinja2
+++ b/ssfl/templates/admin/miscellaneous_functions.jinja2
@@ -13,6 +13,8 @@
             <h3>Miscellaneous Admin Functions</h3>
             <p>Only required parameters for an action are required.</p>
             <form action="{{ url_for('admin_bp.sst_miscellaneous') }}" method="post">
+
+                {#  Work Function          #}
                 {% with %}
                     {% set el_name=form.work_function %}
                     {% set el_class="input" %}
@@ -20,6 +22,7 @@
                     {% include 'base/form_entry.jinja2' %}
                 {% endwith %}
 
+                {#  dpdb show_layout          #}
                 {% with %}
                     {% set el_name=form.page_name %}
                     {% set el_class="input" %}
@@ -27,6 +30,7 @@
                     {% include 'base/form_entry.jinja2' %}
                 {% endwith %}
 
+                {#  df        #}
                 {% with %}
                     {% set el_name=form.filename %}
                     {% set el_class="file" %}
@@ -34,6 +38,7 @@
                     {% include 'base/form_entry.jinja2' %}
                 {% endwith %}
 
+                {#  show_layout         #}
                 {% with %}
                     {% set el_name=form.remove_text %}
                     {% set el_class="input" %}
@@ -67,6 +72,7 @@
                 $('.dpdb').parent().hide();
                 $('.dp').parent().hide();
                 $('.df').parent().hide();
+                $('.show_layout').parent().hide();
                 let opt = $('#js1 option:selected').val();
                 $('.' + opt).parent().show();
             });
