Initial processing of user templates working for frontpage build.

--- a/ssfl/templates/main/main.jinja2
+++ b/ssfl/templates/main/main.jinja2
@@ -12,7 +12,7 @@
     <div class="container-fluid font-weight-bolder">
         {% for row in PAGE.rows %} {# Each item corresponds to all stories horizontally across the page #}
             <div class="row">
-                {% for col in row.ROW.columns %}
+                {% for col in row.columns %}
                     <div class="col {{ col.classes }}">
                         <div class="container-fluid">
                             {% for cell in col.cells %}
