--- a/ssfl/templates/main/multi_row_col.jinja2
+++ b/ssfl/templates/main/multi_row_col.jinja2
@@ -3,7 +3,7 @@
 {% extends 'base/layout.jinja2' %}
 
 {% block content %}
-
+<!-- TODO:  We are not picking up classes or styling information that is included in the context -->
     {% for item1 in snips %} {# Each item corresponds to all stories horizontally across the page #}
         <div class="row">
             {% for item in item1 %} {# Each item corresponds to all stories vertically in a cell #}
