All snippets appear to be working

--- a/ssfl/templates/admin/json_edit.jinja2
+++ b/ssfl/templates/admin/json_edit.jinja2
@@ -105,6 +105,9 @@
                 let opt = $('#js1 option:selected').val();
                 $('.' + opt).parent().show();
             });
+            $(document).ready(function () {
+
+            })
             //# sourceURL=edit_json_file.js
         </script>
     </section>
