--- a/ssfl/templates/admin/json_make_template.jinja2
+++ b/ssfl/templates/admin/json_make_template.jinja2
@@ -209,10 +209,11 @@
         });
         $(document).ready(function(){
         let opt_val = localStorage.getItem('json_make_template');
+        $('#js1').trigger('change');
         if (opt_val) {$('#js1 option:selected').val(opt_val);}
         else {$('#js1 option:selected').val('jcreate');}
         });
-        $(window).resize();
+
         //# sourceURL=json_make_template.js
 
 
