--- a/ssfl/templates/base/slideshow.jinja2
+++ b/ssfl/templates/base/slideshow.jinja2
@@ -1,8 +1,15 @@
 <container class="devBorder container-fluid" {{ float_dir }}>
+
+
     <div class="row">
         <div class="col">
             <div class="devBorder2" style="max-width: {{ slideshow.width }}px;
-                    min-height: {{ slideshow.frame_ht }}px">
+                    {% if slideshow.height %}
+                        min-height: {{ slideshow.height }}px;
+                    {% endif %}
+                    {% if slideshow.background %}
+                        background-color: slideshow.background;
+                    {% endif %}">
                 {% if slideshow.title and slideshow.title != 'NO NAME' %}
                     <figcaption class="{{ slideshow.title_class }}">{{ slideshow.title }}</figcaption>
                 {% endif %}
