Modify Config files to specify problem reporting recipients

--- a/ssfl/static/css/mystyles.css
+++ b/ssfl/static/css/mystyles.css
@@ -67,7 +67,9 @@ button {
     padding: 4px;
 }
 
-/* Collection of styles to help in evaluating layout - normally not invoked 8 */
+/* Collection of styles to help in evaluating layout - normally not invoked
+    Comment in/out to toggle */
+/*
 .devBorder {
     border: #0000e6 solid 1px;
 }
@@ -95,3 +97,4 @@ button {
 .devStyle div div div {
     background-color: #ffd83d;
 }
+*/
