Correct lookup of photos using old ids

--- a/ssfl/static/gen/packed.css
+++ b/ssfl/static/gen/packed.css
@@ -804,7 +804,8 @@ button {
     padding: 4px;
 }
 
-/* Collection of styles to help in evaluating layout - normally not invoked */
+/* Collection of styles to help in evaluating layout - normally not invoked
+    Comment in/out to toggle */
 /*
 .devBorder {
     border: #0000e6 solid 1px;
