--- a/ssfl/templates/base/snippet_sign.jinja2
+++ b/ssfl/templates/base/snippet_sign.jinja2
@@ -1,7 +1,9 @@
-<div class="border rounded-sm border-dark text-center mx-auto m-2 p-2 bg-dark text-light">
+{% set snip = story.sign_snippet %}
+<div class="border rounded-sm border-dark text-center mx-auto m-2 p-2 bg-dark text-light"
+     style="min-height:{{ snip.height }}px;">
     {% if story.title %}
-        <div class="title">{{ story.title }}</div>
+        <div class="title">{{ story.title }} </div>
     {% endif %}
-    <div class="">{{ story.content }}</div>
+    <div class="" style="{{ snip.styling }};">{{ story.content }}</div>
 
 </div>
