Complete support for manage_users

--- a/ssfl/templates/base/nav.jinja2
+++ b/ssfl/templates/base/nav.jinja2
@@ -132,6 +132,9 @@
                         <a class="navbar-item" href="{{ url_for('admin_bp.sst_admin_calendar') }}">
                             Manage Calendar
                         </a>
+                        <a class="navbar-item" href="{{ url_for('sysadmin_bp.manage_users') }}">
+                            Manage Users
+                        </a>
                     </div>
                 </div>
             </div>
